# timer

./: CMakeLists.txt  README.md
modules/app/: CMakeLists.txt
modules/app/src/: Main.cpp
modules/libtimer/: CMakeLists.txt
modules/libtimer/include/timer/: Timer.hpp
modules/libtimer/src/: Timer.cpp
modules/timer/src/: Main.cpp
scripts/: build-msvc15-x64-release.cmd  cmakegen-msvc-15-x64-debug.cmd
